# fast-cards

./: .env  .gitignore  Makefile  README.md  Untitled.ipynb  alembic.ini  pyproject.toml  requirements.txt  sql_app.db
.github/workflows/: codeql-analysis.yml  main.yml
alembic/: env.py
alembic/versions/: 0bbd8b72c27d_first_try.py
resources/: hungarian_cards.json  official-decks.json
scripts/: generate_openapi_file.py  load_cards_to_db.py  load_covid_cards.py  load_hungarian_cards_to_db.py  load_lensa_cards.py  load_official_decks_to_db.py  load_velo_cards.py  openapi.json
src/: application.py  config.py  dependencies.py  exceptions.py  main.py
src/auth/: auth_bearer.py  auth_handler.py  models.py  password_hash.py
src/cards/: crud.py  models.py  sql_models.py
src/database/: crud.py  database.py  database_models.py  schema.py  sql_models.py
src/internal/cards_against_humanity_rules/: game_event_processor.py  game_factory.py  game_related_exceptions.py  game_state_machine.py  god_is_dead_mode_state_machine.py  models.py
src/routers/: cards.py  game.py  items.py  users.py  websocket_endpoints.py
src/users/: crud.py  models.py  sql_models.py
src/utils/: bootstrapping.py  logging_setup.py
src/websocket/: connection_manager.py  models.py
src/websocket_pilot/: models.py  wsock.py
tests/: conftest.py
tests/integration/: conftest.py
tests/integration/auth/: test_auth_endpoints.py
tests/integration/cards/: test_card_crud.py  test_cards_endpoints.py
tests/integration/users/: test_crud.py
tests/unit/auth/: test_password_hash.py
(+7 files in other folders)
